# visual-script

./: .gitignore  .gitmodules  CMakeLists.txt  web_assemble.sh
game/: CMakeLists.txt
game/code/: main.cpp  pch.hpp
game/code/core/: app.cpp  app.hpp  block.cpp  block.hpp  canvas.cpp  canvas.hpp  hitbox.cpp  hitbox.hpp  log.cpp  log.hpp  log.inl
game/code/render/: render_pack.hpp  resizable_render_texture_2d.hpp  smart_render_texture.hpp
game/code/utils/: assert.cpp  assert.hpp  exceptions.hpp  frame.hpp  interfaces.hpp  options.hpp  rectangle_manip.hpp  string_manip.hpp  utils.hpp
game/resources/: vignette.fs
web/: shell.html
